--- a/Denizen/template/overall_footer.html
+++ b/Denizen/template/overall_footer.html
@@ -26,39 +26,18 @@
 
 </div>
 
-	<div class="copyright">
-		<!-- EVENT overall_footer_copyright_prepend -->
-		<p class="footer-row">
-			Absolution Style by <a href="http://www.planetstyles.net/">Premium phpBB Styles</a><br />
-    <a href="http://www.planetstyles.net"><img src="{T_THEME_PATH}/images/credit_line.png" width="140" /></a><br /><br />
-			<span class="footer-copyright">{{ CREDIT_LINE }}</span>
-		</p>
-		<!-- IF TRANSLATION_INFO -->
-		<p class="footer-row">
-			<span class="footer-copyright">{{ TRANSLATION_INFO }}</span>
-		</p>
-		<!-- ENDIF -->
-		<!-- EVENT overall_footer_copyright_append -->
-		<p class="footer-row">
-			<a class="footer-link" href="{{ U_PRIVACY }}" title="{{ lang('PRIVACY_LINK') }}" role="menuitem">
-				<span class="footer-link-text">{{ lang('PRIVACY_LINK') }}</span>
-			</a>
-			|
-			<a class="footer-link" href="{{ U_TERMS_USE }}" title="{{ lang('TERMS_LINK') }}" role="menuitem">
-				<span class="footer-link-text">{{ lang('TERMS_LINK') }}</span>
-			</a>
-		</p>
-		<!-- IF DEBUG_OUTPUT -->
-		<p class="footer-row">
-			<span class="footer-info">{{ DEBUG_OUTPUT }}</span>
-		</p>
-		<!-- ENDIF -->
-		<!-- IF U_ACP -->
-		<p class="footer-row">
-			<a class="footer-link text-strong" href="{{ U_ACP }}">{{ lang('ACP') }}</a>
-		</p>
-		<!-- ENDIF -->
-	</div>
+<div class="copyright">
+    <!-- EVENT overall_footer_copyright_prepend -->
+    <br />
+	Denizen style by <a href="mcmonkey">mcmonkey</a>.
+	<br />
+    Based on Absolution Style by <a href="http://www.planetstyles.net">Premium phpBB Styles</a><br />
+	<br />{CREDIT_LINE}
+    <!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
+    <!-- EVENT overall_footer_copyright_append -->
+    <!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
+    <!-- IF U_ACP --><br /><strong><a href="{U_ACP}">{L_ACP}</a></strong><!-- ENDIF -->
+</div>
 
 <div>
 	<a id="bottom" class="anchor" accesskey="z"></a>
